--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Git Website</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur,
+         reprehenderit rerum eaque temporibus tenetur dolore ea in animi consequatur
+          quos magnam labore, velit porro! Pariatur numquam culpa odit expedita dicta.</p>
 </body>
 </html>
